# benoit

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  benoit  benoit.desktop  build_icon.sh  changelog.html  changelog.md  install.sh
benoit/: Cargo.toml  README.md
benoit-cli/: Cargo.toml  README.md
benoit-cli/src/: main.rs
benoit-cli/src/config/: mod.rs
benoit-cli/src/config/config/: load.rs  load_from.rs  mod.rs  print_help.rs
benoit-cli/src/config/field/: mod.rs
benoit-cli/src/config/section/: mod.rs
benoit-cli/src/config/take/: mod.rs
benoit-cli/src/error/: mod.rs
benoit-cli/src/instance/: mod.rs  run.rs
benoit-cli/src/keyframe/: mod.rs
benoit-cli/src/keyframe/keyframe/: interpolate_between.rs  mod.rs
benoit-cli/src/keyframe/keyframe_interpolater/: mod.rs
benoit/src/: lib.rs
benoit/src/colour/: mod.rs  web.rs
benoit/src/complex/: from_str.rs  mod.rs
benoit/src/error/: mod.rs
benoit/src/fractal/: iters.rs  mod.rs
benoit/src/palette/: mod.rs
benoit/src/palette/palette/: data.rs  mod.rs
benoit/src/palette/palette_data/: mod.rs
benoit/src/render/: mod.rs
benoit/src/render/image_element/: mod.rs
benoit/src/render/raw_element/: mod.rs
benoit/src/render/render/: dump_image.rs  generate.rs  mod.rs  plot.rs
benoit/src/render/render_config/: mod.rs
benoit/src/stopwatch/: mod.rs
include/: benoit.hh
include/benoit/: archstr.hh  arghandl.hh  crtcfg.hh  dat.hh  exit.hh  helpscrn.hh  kernelstr.hh  loadcfg.hh  log.hh  logfunc.hh  logfuncret.hh  main.hh  plotmandelbrot.hh  print.hh  wrtimg.hh
include/benoit/d/: alpha.hh  arch.hh  cfg.hh  debug.hh  dobt.hh  imgfmt.hh  kernel.hh  logdoprint.hh  maxiter.hh  numthrds.hh  outimg.hh  pos.hh  printdolog.hh  resx.hh  resy.hh  thelog.hh  ver.hh
include/benoit/err/: clsfil.hh  wrttofil.hh
include/benoit/t/: arch.hh  dat.hh  imgfmt.hh  kernel.hh  pos.hh  rgba.hh  thrddat.hh
source/benoit/: benoit.rs  main.rs
source/benoit/benoit/: app.rs  application.rs  colour_data.rs  complex.rs  configuration.rs  factorisation.rs  fractal.rs  image.rs  iteration.rs  launcher.rs  palette.rs  render.rs  render_data.rs  renderer.rs  rendering.rs  script.rs  task.rs  video.rs  width_height_ratio.rs
source/benoit/benoit/app/: allocate_buffers.rs  animate.rs  colour.rs  colour_row.rs  configure.rs  draw_feedback.rs  drop.rs  dump.rs  get_iterator_function.rs  get_row_renderer.rs  handle_keys.rs  image_filename.rs  initialise.rs  interactive.rs  loop.rs  new.rs  poll_events.rs  print_controls.rs  render.rs  render_row_julia.rs  render_row_normal.rs  run.rs  still.rs
source/benoit/benoit/application/: animate.rs  colour.rs  draw.rs  dump.rs  get_iterator_function.rs  get_row_renderer.rs  handle_key.rs  handle_keys.rs  initialise.rs  loop.rs  poll_events.rs  render.rs  render_row.rs  render_row_burning_ship.rs  render_row_julia.rs  render_row_mandelbrot.rs  render_row_normal.rs  render_row_tricorn.rs  run.rs
source/benoit/benoit/configuration/: default.rs  load.rs
source/benoit/benoit/fractal/: from_str.rs  get_name.rs  iterate.rs
source/benoit/benoit/fractal/iterate/: burning_ship.rs  mandelbrot.rs  multibrot3.rs  multibrot4.rs  tricorn.rs
source/benoit/benoit/image/: allocate.rs  colour.rs  dump.rs  from_str.rs
source/benoit/benoit/iteration/: iterate_burning_ship.rs  iterate_mandelbrot.rs  iterate_tricorn.rs
source/benoit/benoit/launcher/: parse_arguments.rs  print_help.rs  print_message.rs  run.rs  set_title.rs  setup.rs
source/benoit/benoit/palette/: data.rs  from_str.rs  paint.rs
source/benoit/benoit/palette/paint/: ancient.rs  emerald.rs  fire.rs  greyscale.rs  hsv.rs  lch.rs  ruby.rs  sapphire.rs  simple.rs  twilight.rs
source/benoit/benoit/render/: allocate.rs  colour.rs  colour_data.rs  factorise.rs  iterate.rs  paint.rs  render.rs  render_data.rs  render_point.rs
source/benoit/benoit/render/factorise/: smooth.rs  stepped.rs
source/benoit/benoit/render/iterate/: burning_ship.rs  mandelbrot.rs  multibrot3.rs  tricorn.rs
source/benoit/benoit/render/paint/: ancient.rs  fire.rs  greyscale.rs  hsv.rs  lch.rs  sapphire.rs
source/benoit/benoit/render/render_point/: julia.rs  normal.rs
source/benoit/benoit/render/render_row/: julia.rs  normal.rs
source/benoit/benoit/render_data/: new.rs  send.rs  slice.rs  sync.rs
source/benoit/benoit/renderer/: colour.rs  render.rs
source/benoit/benoit/renderer/render_point/: julia.rs  normal.rs
source/benoit/benoit/script/: animate.rs  configure.rs  dump.rs  dump_frame.rs  run.rs  set_title.rs  still.rs
source/benoit/benoit/task/: colour_data.rs  render_data.rs
source/benoit/benoit/task/colour_data/: new.rs  slice.rs
source/benoit/benoit/task/render_data/: new.rs  slice.rs
source/benoit/benoit/video/: draw.rs  draw_image.rs  draw_textual_feedback.rs  draw_translation_feedback.rs  initialise.rs  sync.rs  update.rs
src/: main.cc  main.rs
src/benoit/: archstr.cc  arghandl.cc  benoit.cc  crtcfg.cc  dat.cc  exit.cc  helpscrn.cc  kernelstr.cc  loadcfg.cc  log.cc  logfunc.cc  logfuncret.cc  main.cc  notiffunc.cc  plotmandelbrot.cc  print.cc  strlen.cc  wrtimg.cc  ~benoit.cc
src/benoit/d/: alpha.cc  cfg.cc  dobt.cc  imgfmt.cc  logdoprint.cc  maxiter.cc  numthrds.cc  outimg.cc  pos.cc  printdolog.cc  resx.cc  resy.cc  thelog.cc  ver.cc
src/benoit/err/: clsfil.cc  wrttofil.cc
src/benoit/t/pos/: pos.cc
