[package]
name        = "benoit"
version     = "2.6.1"
authors     = ["Gabriel Bjørnager Jensen"]
edition     = "2021"
description = "Multithreaded Mandelbrot renderer with support for PNG and WebP encoding."
readme      = "README.md"
repository  = "https://mandelbrot.dk/benoit"

[[bin]]
name = "benoit"
path = "source/benoit/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"

[dependencies]
enum-iterator = "1.4.1"
png           = "0.17.10"
rayon         = "1.8.0"
rug           = "1.22.0"
sdl2          = "0.35.2"
toml          = "0.8.2"
webp          = "0.2.6"

[target.'cfg(windows)'.dependencies]
windows       = "0.51.1"
