[workspace]
members = [
	"benoit",
	"benoit-cli",
#	"benoit-gui",
]
resolver = "2"

[workspace.package]
version    = "3.0.1"
authors    = ["Gabriel Bjørnager Jensen"]
readme     = "README.md"
homepage   = "https://mandelbrot.dk/benoit"
repository = "https://mandelbrot.dk/benoit"

[workspace.lints.clippy]
as_ptr_cast_mut                    = "deny"
as_underscore                      = "warn"
assertions_on_result_states        = "warn"
bool_to_int_with_if                = "warn"
borrow_as_ptr                      = "deny"
branches_sharing_code              = "warn"
cast_lossless                      = "warn"
cast_possible_wrap                 = "warn"
cast_ptr_alignment                 = "deny"
checked_conversions                = "warn"
clear_with_drain                   = "warn"
cloned_instead_of_copied           = "warn"
collection_is_never_read           = "warn"
dbg_macro                          = "warn"
debug_assert_with_mut_call         = "warn"
deref_by_slicing                   = "warn"
derive_partial_eq_without_eq       = "deny"
empty_enum                         = "warn"
empty_enum_variants_with_brackets  = "warn"
empty_line_after_doc_comments      = "warn"
empty_line_after_outer_attr        = "warn"
empty_structs_with_brackets        = "warn"
enum_glob_use                      = "warn"
enum_variant_names                 = "allow"
equatable_if_let                   = "warn"
excessive_precision                = "allow"
exit                               = "warn"
expl_impl_clone_on_copy            = "warn"
explicit_deref_methods             = "warn"
explicit_into_iter_loop            = "warn"
explicit_iter_loop                 = "warn"
fallible_impl_from                 = "deny"
flat_map_option                    = "warn"
float_cmp                          = "deny" # Fortran, is that you?
float_cmp_const                    = "deny"
format_push_string                 = "warn"
from_iter_instead_of_collect       = "warn"
future_not_send                    = "deny"
if_not_else                        = "warn"
if_then_some_else_none             = "warn"
ignored_unit_patterns              = "warn"
impl_trait_in_params               = "warn"
implicit_clone                     = "warn"
imprecise_flops                    = "deny"
inconsistent_struct_constructor    = "deny"
index_refutable_slice              = "warn"
inefficient_to_string              = "warn"
infinite_loop                      = "deny"
into_iter_without_iter             = "deny"
invalid_upcast_comparisons         = "warn"
iter_filter_is_ok                  = "warn"
iter_filter_is_some                = "warn"
iter_not_returning_iterator        = "deny"
iter_on_empty_collections          = "warn"
iter_on_single_items               = "warn"
iter_with_drain                    = "warn"
iter_without_into_iter             = "deny"
macro_use_imports                  = "warn"
manual_assert                      = "warn"
manual_c_str_literals              = "warn"
manual_instant_elapsed             = "warn"
manual_is_variant_and              = "warn"
manual_let_else                    = "warn"
manual_ok_or                       = "warn"
manual_string_new                  = "warn"
map_unwrap_or                      = "warn"
match_bool                         = "warn"
match_on_vec_items                 = "warn"
match_same_arms                    = "warn"
mismatching_type_param_order       = "warn"
missing_const_for_fn               = "warn"
mixed_read_write_in_expression     = "deny"
multiple_unsafe_ops_per_block      = "deny"
must_use_candidate                 = "deny"
mut_mut                            = "deny"
mutex_atomic                       = "deny"
mutex_integer                      = "deny"
needless_bitwise_bool              = "deny"
needless_collect                   = "warn"
needless_continue                  = "warn"
needless_pass_by_ref_mut           = "warn"
needless_pass_by_value             = "deny"
needless_raw_string_hashes         = "warn"
needless_raw_strings               = "warn"
no_effect_underscore_binding       = "deny"
no_mangle_with_rust_abi            = "deny"
non_ascii_literal                  = "deny"
nonstandard_macro_braces           = "warn"
option_as_ref_cloned               = "warn"
option_if_let_else                 = "warn"
option_option                      = "deny"
or_fun_call                        = "deny"
panic_in_result_fn                 = "deny"
path_buf_push_overwrite            = "deny"
pattern_type_mismatch              = "deny"
ptr_as_ptr                         = "deny"
ptr_cast_constness                 = "deny"
pub_underscore_fields              = "deny"
pub_with_shorthand                 = "deny"
read_zero_byte_vec                 = "deny"
redundant_clone                    = "deny"
redundant_closure_for_method_calls = "warn"
redundant_else                     = "warn"
redundant_pub_crate                = "warn"
redundant_type_annotations         = "warn"
ref_as_ptr                         = "deny"
ref_binding_to_reference           = "warn"
ref_option_ref                     = "deny"
rest_pat_in_fully_bound_structs    = "warn"
return_self_not_must_use           = "deny"
same_functions_in_if_condition     = "deny"
same_name_method                   = "deny"
self_named_module_files            = "deny"
semicolon_if_nothing_returned      = "warn"
semicolon_outside_block            = "warn"
separated_literal_suffix           = "warn"
single_char_pattern                = "warn"
str_split_at_newline               = "warn"
string_lit_as_bytes                = "deny"
string_lit_chars_any               = "deny"
string_to_string                   = "deny"
suboptimal_flops                   = "deny"
trait_duplication_in_bounds        = "deny"
transmute_ptr_to_ptr               = "deny"
type_repetition_in_bounds          = "deny"
uninhabited_references             = "deny"
uninlined_format_args              = "deny"
unnecessary_box_returns            = "deny"
unnecessary_join                   = "deny"
unnecessary_self_imports           = "deny"
unnecessary_wraps                  = "warn"
unneeded_field_pattern             = "warn"
unnested_or_patterns               = "warn"
unused_async                       = "warn"
unused_peekable                    = "warn"
unused_rounding                    = "warn"
unused_self                        = "warn"
use_self                           = "deny"
used_underscore_binding            = "deny"
useless_let_if_seq                 = "warn"
verbose_bit_mask                   = "warn"
verbose_file_reads                 = "warn"
wildcard_dependencies              = "deny"
wildcard_enum_match_arm            = "deny"
zero_sized_map_values              = "deny"

[profile.release]
codegen-units   = 1
lto             = "fat"
opt-level       = 3
overflow-checks =  true
