[package]
name    = "benoit-cli"
edition = "2021"
license = "GPL-3.0-or-later"

version.workspace = true
authors.workspace = true

[features]
notify = ["notify-rust"]

[dependencies]
benoit = { path = "../benoit" }

ctrlc      = "3.4.4"
num-traits = "0.2.18"
rug        = "1.24.0"
toml       = "0.8.10"

notify-rust = { version = "4.10.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = "0.54.0"

[lints]
workspace = true
