[package]
name        = "benoit-cli"
edition     = "2021"
license     = "GPL-3.0-or-later"
description = "Multithreaded Mandelbrot renderer, CLI front-end."
readme        = "README.md"

version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true

[features]
notify = ["notify-rust"]

[dependencies]
benoit = { path = "../benoit" }

ctrlc      = "3.4.4"
num-traits = "0.2.19"
rug        = "1.24.1"
toml       = "0.8.13"

notify-rust = { version = "4.11.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = "0.54.0"

[lints]
workspace = true
