[package]
name          = "benoit"
edition       = "2021"
license       = "AGPL-3.0-or-later"
description   = "Multithreaded Mandelbrot renderer."
documentation = "https://docs.rs/benoit"

version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme.workspace     = true

[features]
wgpu-colour = ["wgpu"]

[dependencies]
enum-iterator = "2.0.0"
lazy_static   = "1.4.0"
num-traits    = "0.2.18"
png           = "0.17.13"
rayon         = "1.9.0"
rug           = "1.24.0"

wgpu = { version = "0.19.3", optional = true }

[lints]
workspace = true
