[package]
name          = "benoit"
edition       = "2021"
license       = "AGPL-3.0-or-later"
description   = "Multithreaded Mandelbrot renderer."
documentation = "https://docs.rs/benoit"
readme        = "README.md"

version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
repository.workspace = true

[features]
wgpu-colour = ["wgpu"]

[dependencies]
enum-iterator = "2.1.0"
lazy_static   = "1.4.0"
png           = "0.17.13"
rayon         = "1.10.0"
rug           = "1.24.1"

wgpu = { version = "0.20.0", optional = true }

[lints]
workspace = true
